@@ -2,7 +2,7 @@
 #
 #       License: BSD
 #       Created: February 10, 2004
-#       Author:  Francesc Alted - falted@pytables.org
+#       Author:  Francesc Alted - faltet@pytables.com
 #
 #       $Id$
 #
