@@ -36,6 +36,13 @@ Changes from 2.0.x to 2.1b2
   the source table are copied. If false (the default), the indexes are not
   copied.
 
+- Added new '--sortkey' (sort a table by a column key) and '--copyindexes'
+  (recreate the indexes in original tables) flags to the 'ptrepack' utility.
+
+- When in ptrepack a range is not specified, all the elements of leaves are
+  copied now.  Before, only the first row was copied, and that was clearly
+  wrong.
+
 
 API changes from 2.0.x to 2.1b2
 ===============================
